[package]
name = "smakcr"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/julibeg/smakcr"
readme = "README.md"
keywords = ["k-mer", "counting", "bioinformatics", "sequencing"]
categories = ["bioinformatics"]

[dependencies]
clap = "4.5.20"
bio = "2.0.3"
anyhow = "1.0.93"
niffler = "3.0.0"
log = "0.4.25"
env_logger = "0.11.6"
measure_time = "0.9.0"
seq_io = "0.3.4"
rayon = "1.10.0"

